<resources>
    <string name="app_name">SICENTANG</string>
    <string name="hint_email">Email Anda</string>
    <string name="hint_password">Password Anda</string>
    <string name="hint_password1">Ulangi Password Anda</string>
    <string name="hint_nama">Nama Anda</string>
    <string name="login">Login Disini</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_hilang">KEHILANGAN</string>
    <string name="btn_temukan">MENEMUKAN</string>
    <string name="btn_laporkanLain">HAL LAINNYA</string>
    <string name="guest">Belum Memiliki Akun? Daftar Disini</string>
    <string name="logout">Logout</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="welcome">Selamat Datang</string>
    <string name="profile_image">Select Image</string>
    <string name="copyright">© 2017 SiCENTANG x NUGRAHA</string>



    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- AdMob ad unit IDs -->
    <string name="startup">ca-app-pub-3653711135189794/3978881221</string>
</resources>
