<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:androi="http://schemas.android.com/apk/res-auto"
    tools:context="com.myoganugraha.sicentang.home">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/itk"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="15sp"/>

    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="fill_parent"
        android:layout_height="250sp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/imgLogo"
        android:layout_alignParentStart="true" />



    <Button
        android:id="@+id/btnHilang"
        android:layout_width="fill_parent"
        android:layout_height="40sp"
        android:layout_marginTop="50sp"
        android:text="@string/btn_hilang"
        android:textAlignment="center"
        android:textColor="@color/btm_navbar_ic"
        android:background="@drawable/border_button_home"
        android:layout_below="@+id/view_pager"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="40sp"
        android:layout_marginRight="40sp"
        android:drawableStart="@drawable/lost"
        android:paddingLeft="25sp"
        android:paddingRight="15sp"/>

    <Button
        android:id="@+id/btnTemukan"
        android:layout_marginTop="15sp"
        android:layout_marginLeft="40sp"
        android:layout_marginRight="40sp"
        android:layout_width="fill_parent"
        android:layout_height="40sp"
        android:text="@string/btn_temukan"
        android:textAlignment="center"
        android:textColor="@color/btm_navbar_ic"
        android:background="@drawable/border_button_home"
        android:layout_below="@+id/btnHilang"
        android:layout_alignParentStart="true"
        android:drawableStart="@drawable/found"
        android:paddingLeft="25sp"
        android:paddingRight="15sp"/>

    <Button
        android:id="@+id/btnLaporanLain"
        android:layout_marginTop="15sp"
        android:layout_marginLeft="40sp"
        android:layout_marginRight="40sp"
        android:layout_width="fill_parent"
        android:layout_height="40sp"
        android:text="@string/btn_laporkanLain"
        android:textAlignment="center"
        android:textColor="@color/btm_navbar_ic"
        android:background="@drawable/border_button_home"
        android:layout_below="@+id/btnTemukan"
        android:layout_alignParentStart="true"
        android:drawableStart="@drawable/etc"
        android:paddingLeft="25sp"
        android:paddingRight="15sp"/>


</RelativeLayout>